Content max-width as a constant and fix sub-items overflowing their parent in content

--- a/_sass/_constants.scss
+++ b/_sass/_constants.scss
@@ -14,6 +14,8 @@ $wrapper-padding: 0px;/*20px;*/
 $navigation-width: 300px;
 $content-padding-top-bottom: 10px;
 $content-padding-left-right: 20px;
+$content-max-width: 1000px;
+
 $navigation-element-height: 34px;
 $navigation-border-right: 1px;
 $navigation-level-padding: 14px;
