--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -47,12 +47,16 @@
                 height: calc(100% - (#{$content-padding-top-bottom} * 2));
                 overflow-y: auto;
                 /* Fix for content growing too wide */
-                *{
-					max-width: 1000px;
+                > *{
+					max-width: $content-max-width;
 					/* Set only margins for left and right, not to override
 					inherited top and bottom margin values */
 					margin-left: auto;
 					margin-right: auto;
+					/* Prevent sub-items overflowing parent element */
+					* {
+						max-width: 100%;
+					}
                 }
                 .image-404{
 					float: right; 
